--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ chardet==4.0.0
 click==7.1.2
 feedparser==6.0.2
 Flask==1.1.2
+Flask-APScheduler==1.11.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 pyTelegramBotAPI==3.7.6
+python-dateutil==2.8.1
 pytz==2020.5
 requests==2.25.1
 sgmllib3k==1.0.0
