--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
+aiodns==2.0.0
+aiogram==2.12.1
+aiohttp==3.7.4.post0
 APScheduler==3.7.0
+async-timeout==3.0.1
+attrs==20.3.0
+Babel==2.9.0
+cchardet==2.1.7
 certifi==2020.12.5
+cffi==1.14.5
 chardet==4.0.0
-click==7.1.2
 feedparser==6.0.2
-Flask==1.1.2
-Flask-APScheduler==1.11.0
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-pyTelegramBotAPI==3.7.6
-python-dateutil==2.8.1
-pytz==2020.5
-requests==2.25.1
+idna==3.1
+multidict==5.1.0
+pycares==3.1.1
+pycparser==2.20
+pytz==2021.1
 sgmllib3k==1.0.0
 six==1.15.0
+typing-extensions==3.7.4.3
 tzlocal==2.1
-urllib3==1.26.3
-Werkzeug==1.0.1
+yarl==1.6.3
